# aiSSRF

./: README.md  pyproject.toml
aiSSRF/: __init__.py  config.py  orchestrator.py
aiSSRF/candidate_fetcher/: __init__.py
aiSSRF/collaborator_client/: __init__.py
aiSSRF/llm_judgment/: __init__.py
aiSSRF/payload_generator/: __init__.py
ssrf_scanner/: __init__.py  shared_types.py
ssrf_scanner/candidate_discovery/: __init__.py  engine.py
ssrf_scanner/cloud_credential_chain/: __init__.py  chain.py
ssrf_scanner/llm_judgment/: __init__.py  client.py
ssrf_scanner/oast_correlation/: __init__.py  client.py
ssrf_scanner/orchestrator/: __init__.py  scanner.py
ssrf_scanner/payload_generator/: __init__.py  encoder.py  generator.py
ssrf_scanner/response_diff_analyzer/: __init__.py  analyzer.py
tests/: smoke_test.py  test_candidate_fetcher.py
