[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aissrf"
version = "0.1.0"
description = "Automated SSRF candidate verification via aiScraper + Burp MCP Collaborator"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "burp-mcp-client @ git+https://github.com/th0t3p/burp_mcp_client.git@v0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
